# http-echo

./: .pre-commit-config.yaml  Dockerfile  LICENSE  http-echo.py  http-server.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-docker.yml
http_echo/: cli.py
